[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vondb"
description = "VON: vEnhance's Olympiad Navigator"
authors = [{ name = "Evan Chen", email = "evan@evanchen.cc" }]
license = { text = "MPL-2.0" }
readme = "README.md"
urls = { repository = "https://github.com/vEnhance/von/" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyperclip>=1.9.0",
    "PyYAML>=6.0.2",
    'pyreadline3>=3.0.6; sys_platform == "win32"',
    'colorama>=0.4.3; sys_platform == "win32"'
]
dynamic = ["version"]

[tool.hatch.version]
path = "von/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["von"]

[project.scripts]
von = "von.__main__:main"

[tool.hatch.envs.dev]
dependencies = [
    "codespell>=2.4.1",
    "pyright>=1.1.394",
    "toml>=0.10.2",
    "ruff>=0.9.7"
]

[tool.pyright]
enableTypeIgnoreComments = true
exclude = ["**/node_modules", "**/typings", "**/__pycache__", ".git", "venv", ".venv", "**/migrations", "**/tests.py"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

reportAssertAlwaysTrue = "error"
reportCallInDefaultInitializer = "warning"
reportConstantRedefinition = "none"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInvalidStringEscapeSequence = "error"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "warning"
reportTypedDictNotRequiredAccess = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUnitializedInstanceVariable = "warning"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "warning" # TODO we'll fix this one day
reportUnknownVariableType = "none"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUnsupportDunderAll = "warning"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedFunction = "error"
reportUnusedImport = "none"
reportUnusedNamedTuple = "error"
reportUnusedVariable = "warning"
reportWildcardImportFromLibrary = "warning"
strictDictionaryInference = false
strictListInference = false
strictParameterNoneValue = false
strictSetInference = false

[tool.ruff]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.codespell]
skip = "von/puid.py"
count = ""
quiet-level = 3
ignore-words-list = "ques"
